2017-12-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGraphicsContext.m:  When using clang and the gnustep
	runtime (the nonfragile API), it seems the compiler calculates the
	offset of the _gcontext instance variuable in the NSThread object
	incorrectly, causing a crash.
	Until we know why and can fix it, we need a workaround.  The simplest
	one would be not to use the instance variable at all, but on the
	assumption that the instance variable was added to address a real
 	performance issue it seems better to use the runtime to access the
	instance variable.

2017-12-21 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/ReleaseNotes.gsdoc
	* ANNOUNCE
	* NEWS
	* Version: Cut a new release of gnustep-gui which requires
	gnustep-base 1.25.1.

2017-12-10 Ivan Vucica <ivan@vucica.net>

	* NEWS: Regenerate NEWS file for the 0.26.0 release.

2017-12-07 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi: Use GNUSTEP-GUI-VERSION even when
	talking about -back.
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi: Update with notable changes for 0.26.0.
	* ANNOUNCE: Regenerated the ANNOUNCE file from announce.texi and
	news.texi.

2017-12-07 Ivan Vucica <ivan@vucica.net>

	* Source/NSImage.m (-initWithCoder:): Clean up and reduce amount
	of releases of self.

2017-12-03 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSScreen.h
	* Source/NSScreen.m (-backingScaleFactor): Add new method. Change
	return value of -userSpaceScaleFactor to CGFloat.
	* Source/NSWindow.m (-backingScaleFactor): Return 1 instead of 0.

2017-10-28  Graham Lee  <graham@iamleeg.com>

	* Source/NSImage.m (initWithCoder:): restore image name when
	loading an archived image with a name that can't be resolved at
	load time. Fixes Gorm bug #46317.

2017-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-isPartlyOffScreen): Protect agains window or
	screen being nil.